[tool.poetry]
name = "sse-fastapi"
version = "0.1.0"
description = ""
authors = ["Yegor Kutuzov"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
fastapi = "^0.73.0"
uvicorn = "^0.17.1"
sse-starlette = "^0.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

